# modern_cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  broken_code.cpp  example_calculator.cpp
cmake/: Cpplint.cmake  GoogleTest-CMakeLists.txt.in  MathlibConfig.cmake.in
docs/doxygen/: CMakeLists.txt  README.md
docs/latex_notes/: CMakeLists.txt  biblio.bib  note.tex
python/: CMakeLists.txt
python/utest/: test_other_stuff.py  test_stuff.py
utest/: CMakeLists.txt  test_naive_calculator.cpp  test_transforms.cpp
